2004-12-28 Stuart Brorson   <sdb@cloud9.net>

	* lib/system-gnetlistrc: Changed to refer to system-gafrc instead
	of system-commonrc

2004-12-28 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-cascade.scm: Applied patch by Dan McMahill to fix
	a bug.

	* docs/README.sysc scheme/gnet-systemc.scm: Added SystemC backend by
	Jaume Masip
	
	* scheme/gnet-eagle.scm scripts/sch2eaglepos.sh docs/README.eagle: 
	Added Eagle PCB scheme backend and cleanup script.   The backend
	and script were written by Braddock Gaskill. 

	* docs/gnetlist.1: Added information on -s (from the usage of 
	gnetlist)

	* tests/*.spice-sdb: Update various regression files with the new
	output from spice-sdb

2004-12-27 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20041228

2004-08-23 SDB   <sdb@cloud9.net>

	* Added fcns to pass the invoking command line to the Scheme backend
	as a string.  This allows the invoking command to be placed into
	a SPICE netlist in the first line.  Affected files:
	src/g_register.c, parsecmd.c, globals.c, g_netlist.c, gnetlist.c
	include/globals.h prototype.h

2004-08-17 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/Makefile.am: Removed gschem2pcb from bin_SCRIPTS, as
	gsch2pcb is now the prefered tool.

2004-07-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-spice-sdb.scm: Added Stuart's latest backend
	
	* tests/*: Updated some of the golden files to take into account
	version change string in new spice-sdb backend.

2004-07-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/i_vars.h, prototype.h, src/g_rc.c, g_register.c,
	gnetlist.c, i_vars.c: Removed a whole bunch of rc related code.
	The removed code was moved into libgeda.

        * configure.ac: Updated version to 20040710
	
2004-02-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_traverse.c: Fixed a broken comment (broken by indent)

2004-01-17 Ales Hvezda   <ahvezda@geda.seul.org>

        * config.h.in: Remove machine generated file.
