@@ -3,6 +3,7 @@ void g_set_project_current(TOPLEVEL *pr_current);
 SCM g_get_command_line();   /* SDB -- 8.22.2004 */
 SCM g_get_calling_flags();  /* SDB -- 9.1.2003  */
 SCM g_get_packages(SCM level);
+SCM g_get_non_unique_packages(SCM level);
 SCM g_get_pins(SCM uref);
 SCM g_get_all_nets(SCM scm_level);
 SCM g_get_all_unique_nets(SCM scm_level);
